[package]
name = "circulating_supply"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix = "0.13.0"
bigdecimal = "=0.1.0"
uint = { version = "0.8.3", default-features = false }
near-primitives = "0.15"
anyhow = "1.0.51"
chrono = "0.4.19"
tracing = "0.1.13"
tokio = { version = "1.1", features = ["sync", "time"] }
dotenv = "0.15.0"
near-jsonrpc-client = "0.4.0"
near-jsonrpc-primitives = "0.15.0"

# syn version conflict, replace with crates.io version once released
near-sdk = { git = "https://github.com/near/near-sdk-rs", rev="03487c184d37b0382dd9bd41c57466acad58fc1f" }

database = { path = "../database" }
