[package]
name = "indexer-explorer-lake"
version = "0.10.1"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2021"
rust-version = "1.62.1"

[dependencies]
actix = "0.13.0"
actix-rt = "2.2.0"
anyhow = "1.0.51"
aws-types = "0.13.0"
aws-sdk-s3 = "0.13.0"
borsh = "0.7.1"
clap = { version = "3.1.6", features = ["color", "derive", "env"] }
dotenv = "0.15.0"
futures = "0.3.5"
itertools = "0.10.3"
openssl-probe = { version = "0.1.2" }
r2d2 = "0.8.8"
tokio-stream = { version = "0.1" }
tracing = "0.1.13"
tracing-subscriber = "0.2.4"

near-jsonrpc-client = "0.4.0-beta.0"
near-lake-framework = "0.5.2"
near-primitives = "0.14"

database = { path = "../database" }
